changes to amendments in two places

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -113,7 +113,9 @@ Governing Board responsibilities include, but are not limited to:  %omitted "Col
 
 %\item Charging the Spokepersons with preparation of a yearly plan for the collaboration and the ratification of this plan. 
 
-\item Approval and revision of Collaboration Bylaws, including the Membership and Publication and Speakers policies.   Amendment of the Bylaws requires a supermajority of the GB.  Major changes (see \S\ref{subsec:amend}) must be ratified by the Voting Members of the Collaboration.  %This excludes any Bylaws that directly pertain the power, scope, election, etc. of the GB, which will be discussed in Section \ref{subsec:amend}.
+\item Approval and revision of Collaboration Bylaws, including the Membership and Publication and Speakers policies.   
+\textcolor{red} {The currently ratified version of the Bylaws must be available on a public website.}
+Amendment of the Bylaws requires a supermajority of the GB.  Major changes (see \textcolor{red}{\S\ref{sec:amend}}) must be ratified by the Voting Members of the Collaboration.  %This excludes any Bylaws that directly pertain the power, scope, election, etc. of the GB, which will be discussed in Section \ref{subsec:amend}.
 
 
 %\item Oversight of the activities of the Spokepersons. The GB may require a detailed verbal, or written report from the Spokepersons on any action. 
@@ -127,7 +129,7 @@ Governing Board responsibilities include, but are not limited to:  %omitted "Col
 %\item Oversight of various collaboration sub-committees and councils including, but not
 %limited to: Elections, Membership, Publications, Science Council, Education and
 %Public Outreach, and the Junior Scientist Advancement Committee, through reports
-%from both the Spokepersons and \exec \ as well as other required duties spelled out in these Bylaws. \textcolor{red}{Keep or remove this? (E.g., Reading pubs section - the GB ratifies pub policy changes so it seems it would be good to clearly state that the GB might interact with these bodies}
+%from both the Spokepersons and \exec \ as well as other required duties spelled out in these Bylaws. \textcolor{red}{Keep or remove this? (E.g., Reading pubs section - the GB ratifies pub policy changes so it seems it would be good to clearly state that the GB might interact with these bodies.)}
 
 \item Approval of additional long-standing sub-committees.% as required. 
 This may include promotion of short term sub-committees established by the Spokespersons to long-term status. 
@@ -175,12 +177,14 @@ The GB appoints the Chair and two additional Members of the Election and Voting 
 % A two-week collaboration-wide notice is required for a vote for removal and such a vote will be taken if at least half the GB members support such a proposal to the Chair. After the vote is taken the record of the vote (e.g., who voted and how) will be made available to the collaboration. In the event of a removal, the open position(s) will be filled following the procedures in these bylaws.
  
  
-\subsection{Amendments to the Bylaws}
+\subsection{\textcolor{red} {\sout{Amendments to the Bylaws (moved to \S\ref{sec:amend})}}}
 %pertaining to the Governing Board} 
+\textcolor{red} {\sout{
 \label{subsec:amend}
-The GB may make minor amendments to the Bylaws as needed.   The GB must  include a tracking cover page with the Bylaws that notes the document version history, including dates of amendments with short synopses of which sections were impacted.  The currently ratified version of the Bylaws must be available on a public website.  Each revised version must be made available to the Collaboration for review and comment for at least one month before the GB can move to ratify the amended Bylaws.  Ratification requires a supermajority of the GB.
+The GB may make minor amendments to the Bylaws as needed.   The GB must  include a tracking cover page with the Bylaws that notes the document version history, including dates of amendments with short synopses of which sections were impacted.  The currently ratified version of the Bylaws must be available on a public website.  Each revised version must be made available to the Collaboration for review and comment for at least one month before the GB can move to ratify the amended Bylaws.  Ratification requires a supermajority of the GB.}}
 
-Major amendments to the Bylaws, including amendments pertaining to the election and scope of the GB itself,  must be ratified by the Collaboration.  The proposed amendments must be approved by a supermajority vote of the GB, and made available to the Collaboration for review and comment for at least one month.  After the review period, the Voting Members of the Collaboration can  ratify the amended Bylaws with a majority vote. 
+\textcolor{red} {\sout{
+Major amendments to the Bylaws, including amendments pertaining to the election and scope of the GB itself,  must be ratified by the Collaboration.  The proposed amendments must be approved by a supermajority vote of the GB, and made available to the Collaboration for review and comment for at least one month.  After the review period, the Voting Members of the Collaboration can  ratify the amended Bylaws with a majority vote. }}
 
 \section{Co-Spokespersons}
 \label{sec:spokes}
@@ -625,7 +629,7 @@ Any disputes regarding the review process will be resolved by the Publication Bo
 
 Graduate thesis and dissertation documents are exempted from Collaboration review, but related publications (e.g.~developed from an individual chapter) are subject to review.
 
-\subsection{Talks and Public communications}
+\subsection{Talks and Public Communications}
 %\Comment{[Ed. note: This is based on the non-controversial interim policy.]}
 
 The role of the Speakers Bureau is to help Collaboration members give more and better talks in support of the Collaboration. In additon, the role of the Speakers Bureau is to ensure that talks get distributed among the collaboration members in a way that reflects the contributions of different members to the collaboration, their career status and the desire to promote junior members, and equity of opportunities to give talks. The duties of the Speakers Bureau are to:
@@ -699,13 +703,24 @@ ombudsperson role
 \end{itemize}
 
 \subsection{Selection}
-Ombudsperson candidates will be self-nominated, the ombudsperson will be selected by the Spokepersons and ratified by the GB.
+Ombudsperson candidates will be self-nominated.  The Ombudsperson will be selected by the Spokepersons and ratified by the GB.
+
 
 \section{Amendments to Bylaws}
 \label{sec:amend}
+These Bylaws may be amended by the GB. \textcolor{red} {Amendments may be presented for consideration to the GB at one of its regularly scheduled meetings by one or both Spokespersons or any GB member.
+\sout{A new bylaw or an amendment may be presented to the GB at one of its regularly scheduled meetings for consideration. Amendments may be introduced by any GB member or by a spokesperson.}
+The GB  classifies proposed amendments as minor (e.g., rewordings to clarify ambiguous text, editing to improve readability, or changes to capture operational details of elections, meetings, or appointments) or major (e.g. amendments pertaining to the scope and composition of the GB itself).  The Spokespersons approve the initial classification and may reclassify minor amendments as major after the Collaboration review period described below.}
 
+\textcolor{red}{
+%The GB may make minor amendments to the Bylaws as needed.   
+The GB must  maintain a tracking cover page with the Bylaws that notes the document version history, including dates of amendments with short synopses of which sections were impacted.  Proposed amendments must be approved by a supermajority vote of the GB, and made available to the Collaboration for review and comment for at least one month.  
+For minor amendments, the GB can  ratify the revised Bylaws after the review period with a supermajority vote. Major amendments to the Bylaws must be ratified by the Collaboration. After the review period, the Voting Members of the Collaboration can  ratify the amended Bylaws with a majority vote. }
+
+
+\textcolor{red} {\sout{
 These bylaws may be amended by the GB. A new bylaw or an amendment may be presented to the GB at one of its regularly scheduled meetings for consideration. Amendments may be introduced by any GB member or by a spokesperson. Proposed amendments will be distributed by email to the entire Collaboration for their comments following this meeting. The GB will then consider the amendment for adoption at the next scheduled GB meeting. Approval of an amendment requires a super-majority vote of the GB members present. Additionally, approval of bylaws pertaining to the governance of the Governing Board also require approval of  {\it a majority of voting eligible Collaboration members.}
-
+}}
 
 
 
