--- a/bylaws.tex
+++ b/bylaws.tex
@@ -225,7 +225,7 @@ Spokesperson responsibilities include, but are not limited to the following:
 
 %Additionally, the Spokepersons are ex-officio, non-voting members of the Governing Board.  
 %\textit{The Governing Board, via super-majority vote, may amend these duties.} 
-Spokespersons are elected to two-year terms. The election process is detailed below in \S\ref{sec:elections}.   To facilitate interactions of the Collaboration with the agencies and national laboratories, term limits will not be required prior to the establishment of the Project.  Two term limits are expected to be imposed by the GB amendment of the Bylaws after the CMB-S4 Construction Project is firmly established with the Project leadership team in place. 
+Spokespersons are elected to two-year terms. The election process is detailed in \S\ref{sec:elections}.   To facilitate interactions of the Collaboration with the agencies and national laboratories, term limits will not be required prior to the establishment of the Project.  Two term limits are expected to be imposed by the GB amendment of the Bylaws after the CMB-S4 Construction Project is firmly established with the Project leadership team in place. 
 
 
 
@@ -258,7 +258,8 @@ in a majority of meetings over a one year period will be replaced in the nearest
 
 
 \section{Elections}\label{sec:elections}
-All elected positions of the major bodies in the CMB S4 Collaboration serve two-year terms (with the exception of the Postdoctoral Member on the GB, who serves a one-year term). Most positions have term limits.  Elections for leadership roles are  arranged so that $\sim 50\%$ of the members in each body will be up for election each year.  As described in Appendix~\ref{app:first_election}, roughly half the initial terms will be for three years to allow for staggered terms to improve continuity.  Figure~\ref{fig:elect_cycle} displays the staggered terms schematically.  New appointments take office on July 1 in the year of their election.  
+All elected positions of the major bodies in the CMB S4 Collaboration serve two-year terms (with the exception of the Postdoctoral Member on the GB, who serves a one-year term). Most positions have term limits.  Elections for % leadership roles 
+GB Members are  arranged so that $\sim 50\%$ of the members will be up for election each year.  As described in Appendix~\ref{app:first_election}, roughly half the initial terms will be for three years to allow for staggered terms to improve continuity.  {\color{red} \sout{Figure~\ref{fig:elect_cycle} displays the staggered terms schematically.}}  New appointments take office on July 1 in the year of their election.  
 
 %In this section of the bylaws the process and timing for each major election is described.  
 %Figure~\ref{fig:elect_cycle} displays schematically the timing of the election cycles described below.  
@@ -278,21 +279,22 @@ The procedures for conducting the initial elections of the Collaboration are giv
 \begin{center}
 \includegraphics[width=6.5in]{Election_cycle_v2.png}
 \end{center}
-\caption{CMB-S4 Election and appointment cycles. For the first election, $\sim\ 50$\% of the terms are for three years rather than the nominal two, to enable staggered elections/appointments going forward.}
+\caption{\color{red} WILL REMOVE FIGURE AS IT IS NO LONGER NEEDED - AS MUCH OF THE STAGGERING HAS BEEN REMOVED \sout{CMB-S4 Election and appointment cycles. For the first election, $\sim\ 50$\% of the terms are for three years rather than the nominal two, to enable staggered elections/appointments going forward.}}
 \label{fig:elect_cycle}
 \end{figure}
+
 
 %\subsection{Elections of a Co-Spokesperson}
 \subsection{Spokespersons}
 
-Co-Spokespersons are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  %presented at the GB meeting closest to January 1 each year. 
+Spokespersons are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  %presented at the GB meeting closest to January 1 each year. 
 %The Co-Spokesperson elections will occur prior to elections of the Governing board. 
 %As a Co-spokesperson can not be a voting member of the GB, if 
-If a Voting Member of the GB is elected as a co-Spokesperson, they must resign their GB seat prior to the start of the co-Spokesperson term and this vacancy will be filled in the next GB election. 
+If a member of the GB is elected as a Spokesperson, they must resign their GB seat prior to the start of their Spokesperson term and this vacancy will be filled in the next GB election. 
 
-Prior to the election, Voting Members are asked to nominate individuals for Spokesperson to the Election and Voting Commission. Each voter may nominate one candidate and self-nominations are accepted. %A minimum of two nominations is  required for a nominee to be eligible to appear on the slate of election candidates. 
+Prior to the election, Voting Members are asked to nominate individuals for Spokesperson to the Election and Voting Commission. Each Voting Member may nominate {\color{red} \sout{one}} candidates and self-nominations are accepted. %A minimum of two nominations is  required for a nominee to be eligible to appear on the slate of election candidates. 
 After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election.
-Each Voting Member votes for a single candidate for each open Spokesperson position. \textcolor{red}{A ranked voting scheme to be approved by the GB prior to the first election after the collaboration is formed will be used to determine the two Co-Spokespersons. Elections are to be held sufficiently early such that new electees may serve in ``observatory roles'' for three months prior to taking office.}
+{\color{red} \sout{Each Voting Member votes for a single candidate for each open Spokesperson position.} A ranked voting scheme approved by the GB prior to the first election \sout{after the collaboration is formed will be} is used to determine the Spokespersons. Elections are to be held sufficiently early such that new electees may interact with the current Spokespersons and \shorte\ for three months prior to taking office to ensure a smooth transition. \sout{may serve in ``observatory roles'' for three months prior to taking office.}}
 In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. 
 
 %The elected candidates will take office when the EVC announces the results of the election to the Collaboration via email. 
@@ -310,8 +312,8 @@ If no candidate agrees to stand for election, the terminating co-Spokesperson wi
 The co-Chairs of the Science Council, and the Chairs of the Membership Committee and the Publication and Speakers Committee are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  If a Voting Member of the GB is elected to one of these positions, they must resign their GB seat prior to taking office as Chair, and this vacancy will be filled in the next GB election. 
 
 Prior to the election, Voting Members are asked to nominate individuals for the Chair positions to the EVC.   Self-nominations are accepted.
-After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election. \textcolor{red}{Candidates are only allowed to stand for one open position.}
-Each Voting Member votes for a single candidate for each  \textcolor{red}{open Committee  Chair position. A ranked voting scheme to be approved by the GB prior to the first election after the collaboration is formed will be used to determine the Science Council Co-chairs. Elections are to be held sufficiently early such that new electees may serve in ``observatory roles'' for three months prior to taking office.}
+After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election. \textcolor{red}{Candidates are only allowed to stand for one open position in a given election.
+\sout{Each Voting Member votes for a single candidate for each  open Committee  Chair position.} A ranked voting scheme approved by the GB prior to the first election \sout{after the collaboration is formed will be} is used to determine the Science Council Co-chairs. \sout{Elections are to be held sufficiently early such that new electees may serve in ``observatory roles'' for three months prior to taking office.}}
 In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. 
 
 If no candidate agrees to stand for election, the terminating Chair will continue to serve for six months, after which a special election will be held. The term of the individual elected in a special election will be reduced by the amount needed to cause the sum of their term and the additional months served by the terminating Chair to equal two years.
@@ -320,12 +322,12 @@ If no candidate agrees to stand for election, the terminating Chair will continu
 \subsection{Governing Board}
 \label{sec:gb-elections}
 
-The 18 GB Members drawn Senior Members of the Collaboration are elected to two-year terms.  All Senior Members may  run for these positions. The one GB Member drawn from the Postdoctoral Members of the Collaboration is elected for a one-year term.
+The 18 GB Members drawn from the Senior Members of the Collaboration are elected to two-year terms.  All Senior Members may  run for these positions. The one GB Member drawn from the Postdoctoral Members of the Collaboration is elected for a one-year term.
 
 The election for the Senior Members on the GB proceeds as follows. 
 Prior to the election, Voting Members are asked to nominate individuals for the GB to the EVC.   Self-nominations are accepted. After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election.
 %Each Voting Member votes for a single candidate for each vacant GB position.  % In the event of a tie for the last open position, a runoff election will be held between the two candidates that have the same number of votes. 
-\textcolor{red}{The EVC shall adopt a ranked voting system for the Governing Board election.  The exact details of this ranking scheme are to be determined by the EVC with approval of the Governing Board prior to the first Election after the collaboration is formed. }
+\textcolor{red}{The EVC uses a ranked voting system for the GB election, as approved by the GB prior to the first election. }
 
 
 %Every year, following completion of the Spokeperson election and any required \exec \ elections, the EVC then carries out elections for seats on the Governing Board whose term is expiring in less than 12 months. The EVC first solicits self-nominations for Governing Board membership and candidate information is then circulated to qualified electors as defined in the membership section of these bylaws. 
@@ -351,15 +353,16 @@ For other elected Collaboration roles, the EVC is charged with establishing elec
 \section{Councils and Committees}
 \label{sec:councils}
 Four of the organizational structures overseen by the Spokespersons have representatives on the \exec\ as described in 
-\S\ref{sec:exec}.  These are the Science Council, the Technical Council, the Membership Committee and the Publications and Speakers Committee.  Their composition and charges are described in this section.  Three other standing committees for the Collaboration have been defined at this time and are described below.  
+\S\ref{sec:exec}.  These are the Science Council, the Technical Council, the Membership Committee and the Publications and Speakers Committee.  Their composition and charges are described in this section.  Three other standing committees for the Collaboration %have been defined at this time and 
+are described below.  
 
 \subsection{Science Council and Analysis Working Groups}
 \label{sec:SC}
 
-\textbf{The Science Council works closely with the Spokespersons to coordinate the key scientific objectives of the Collaboration}.  The Science Council is led by two co-Chairs elected by the Voting Members of the Collaboration, who also serve as Members of the \exec.   \textcolor{red}{The Science Council chairs serve with two-year terms and are limited to two consecutive terms with one year off required before standing again.}
+The Science Council works closely with the Spokespersons to coordinate the key scientific objectives of the Collaboration.  The Science Council is led by two co-Chairs elected by the Voting Members of the Collaboration, who also serve as Members of the \exec.   \textcolor{red}{The Science Council chairs serve two-year terms and are limited to two consecutive terms with one year off required before standing again.}
 The remaining Members of the Science Council are the co-coordinators of the various Analysis Working Groups. These Working Groups are open to all Collaboration Members, and will be formally established by the Spokespersons.  
 
-The Science Council approves the projects that lead to publications and is responsible for maintaining a list of Key Science topics  (\S\ref{sec:pubprop}). \textcolor{red}{It is charged to work closely with the Spokespersons. and the Executive Team to ensure that the key science goals of the Collaboration are achieved.} 
+The Science Council approves the projects that lead to publications and is responsible for maintaining a list of Key Science topics  (\S\ref{sec:pubprop}). \textcolor{red}{It is charged to work closely with the Spokespersons and the \shorte\ to produce a coherent plan for advancing the key science goals of the Collaboration.} 
 
 Each Analysis Working Group will have two co-coordinators who  serve for two-year terms with the exception of one initial coordinator who will serve for a three-year term to enable staggered appointments in the future.  The Science Council Chairs will solicit self-nominations for these co-coordinator positions. The Spokespersons will appoint coordinators with the advice of the Science Council Chairs, and will consider the distribution of early and late career Members when making these appointments. Coordinators will ordinarily not serve back-to-back terms.
 
@@ -369,11 +372,11 @@ The Technical Council works closely with the Spokespersons to coordinate the tec
 
 Each Technical Working Group will have two co-coordinators who serve for two-year terms with the exception of one initial coordinator who will serve for a three-year term to enable staggered appointments in the future, as needed.  The Technical Council Chairs will solicit self-nominations for these co-coordinator positions. The Co-spokespersons will appoint coordinators with the advice of the Technical Council Chairs, and will consider the distribution of early and late career Members when making these appointments.
 
-We anticipate the role of and/or the need for the Technical Council will be readdressed in these Bylaws when a Project is formed.
+We anticipate the role of and/or the need for the Technical Council will be readdressed in these Bylaws when the Project is established.
 
 \subsection{Membership Committee}
 
-The Membership Committee (MC) consists of seven people including a Chair. The Chair is elected following the election cycle of the Collaboration with  two-year terms, and is limited to two consecutive terms with one year off required before standing again. \textcolor{red}{The six remaining members are appointed by the \shorte\ following approval of the slate of proposed members by the Governing Board.  These members have the same term limits as the elected chair.} If a MC Member leaves before their term is complete, the \shorte\ will appoint\textcolor{red}{---with Governing Board approval---} a replacement to finish out their term.  MC Members can be removed by a supermajority of the GB at any time.  
+The Membership Committee (MC) consists of seven people including a Chair. The Chair is elected following the election cycle of the Collaboration with  two-year terms, and is limited to two consecutive terms with one year off required before standing again. \textcolor{red}{The six remaining members are appointed by the Spokespersons after consultation with the \shorte\ and subject to approval of the GB.  These members have the same term limits as the elected Chair.} If a MC Member leaves before their term is complete,  \textcolor{red}{the Spokespersons will appoint a replacement to complete their term, subject to approval of the GB.}   MC Members can be removed by a supermajority of the GB at any time.  
 
 
 The appointed Members of the MC should represent the overall Collaboration, and there should be at least two Members from the Technical Working Groups and two Members from the Analysis Working Groups on the MC.  This balance may be amended as the scientific needs of the Collaboration evolve. % \Comment{This leaves two spots to encompass people who might not fall neatly into either group.}
@@ -383,7 +386,7 @@ The duties of the MC  are to review and evaluate membership applications, review
 
 \subsection{Publication and Speakers  Committee}
 \label{sec:pubcouncil}
-The Publication and Speakers Committee (PSC) consists of thirteen people including a Chair. The Chair is elected following the election cycle of the Collaboration with  two-year terms, and is limited to two consecutive terms with one year off required before standing again. There are two sub-committees which together comprise the PSC: the Publications Board with eight Collaboration Members and the Speakers Bureau with four Collaboration Members. \textcolor{red}{The Chair of the PSC chairs both of the subcommittees.} \textcolor{red}{The twelve non-elected committee members are appointed by the \shorte\ following approval of the slate of proposed members by the Governing Board.} The twelve appointed members serve with the same term limits as the elected Chair.  Roughly half of each group should be pre-tenure. If a PSC Member leaves before their term is complete, the \shorte\ will appoint\textcolor{red}{---with Governing Board Approval---}a replacement to finish out their term.  PSC members can be removed by a supermajority of the GB at any time.  
+The Publication and Speakers Committee (PSC) consists of thirteen people including the Chair. The Chair is elected following the election cycle of the Collaboration with  two-year terms, and is limited to two consecutive terms with one year off required before standing again. There are two sub-committees which together comprise the PSC: the Publications Board with eight Collaboration Members and the Speakers Bureau with four Collaboration Members. \textcolor{red}{The Chair of the PSC chairs both subcommittees.} \textcolor{red}{The twelve non-elected committee members are appointed by the Spokespersons after consultation with the \shorte\ and subject to approval of the GB.} The twelve appointed members serve with the same {\color{red} term duration and limits as the Chair.}  Roughly half of each group should be pre-tenure {\color{red} or the equivalent junior status for non-professorial positions}. If a PSC Member leaves before their term is complete, \textcolor{red}{the Spokespersons will appoint a replacement to complete their term, subject to approval of the GB.}  PSC members can be removed by a supermajority of the GB at any time.  
  
 
 
@@ -391,14 +394,15 @@ The Publication and Speakers Committee (PSC) consists of thirteen people includi
 
 \subsection{Junior Scientist Advancement Committee}
 
-The role of the Junior Scientist Advancement Committee (JSAC) is to ensure that junior members (defined as students and postdoctoral researchers) within the Collaboration are represented, assisted, and supported throughout the  tenure of the Collaboration. This will include arranging mentors for junior members who desire mentorship, and facilitating junior member career advancement through relevant workshops and other activities. The JSAC Chair and deputy Chair are appointed by the \shorte\ after the elections and serve 2 year terms that parallel the Collaboration's elections. Membership on the JSAC is open to volunteers from the Collaboration, with the approval of the JSAC Chair. 
+The role of the Junior Scientist Advancement Committee (JSAC) is to ensure that junior members (defined as students and postdoctoral researchers) within the Collaboration are represented, assisted, and supported throughout the  tenure of the Collaboration. This will include arranging mentors for junior members who desire mentorship, and facilitating junior member career advancement through relevant workshops and other activities. The JSAC Chair and Deputy Chair are appointed by the \shorte\ after the elections and serve two year terms that parallel the Collaboration election cycle. Membership on the JSAC is open to volunteers from the Collaboration, with the approval of the JSAC Chair. 
 
 
 \subsection{External Collaborators Committee}
 
-The role of the External Collaborators Committee (ECC) is to provide the necessary link to external follow-up observations or survey data that required to maximize the science return from CMB-S4. The ECC Chair and deputy Chair are appointed by the \shorte\ after the elections and serve terms that parallel those of the elected Collaboration positions. The Chair will appoint additional members as required to ensure adequate knowledge of the collaborations being pursued resides in the ECC. Self nominations for consideration of ECC are expected. 
+The role of the External Collaborators Committee (ECC) is to provide the necessary link to external follow-up observations or survey data that required to maximize the science return from CMB-S4. The ECC Chair and Deputy Chair are appointed by the \shorte\ for two year terms. {\color{red} \sout{terms after the elections that parallel those of the elected Collaboration positions. }}
+The Chair will appoint additional members as required to ensure adequate knowledge of the collaborations being pursued resides in the ECC. Self nominations for consideration of ECC are expected. 
 
-The committee will draft all the necessary documents for external collaboration agreements and memorandums of understanding (MOUs). These will be presented to the Spokespersons and the  \shorte who have the ability to amend and alter these agreements and MOUs as they choose. Such agreements are then brought forward by the Spokespersons to the GB for final approval. %\Comment{This might also fall under Project management.}
+The committee drafts the necessary documents for external collaboration agreements and memoranda of understanding (MOUs). These are presented to the Spokespersons and the \shorte\ who have the authority to amend and alter the agreements and MOUs. The agreements are brought forward by the Spokespersons to the GB for final approval. %\Comment{This might also fall under Project management.}
 
 \subsection{Education and Outreach Committee}
 
@@ -428,8 +432,8 @@ Five types of members are defined here.
 \item {\bf Student Member:} A graduate student working with a Senior Member at their institution can be designated as a Student Member by that Senior Member.  We do not anticipate granting membership to students who are not supervised by a Senior Member.
 
 
-\item\textcolor{red}{ {\bf Provisional Member:}  A provisional member is a someone who has not yet been approved for regular
-(Senior, Postdoctoral or Student) member status.  This status applies to all new Student and Postdoctoral members
+\item\textcolor{red}{ {\bf Provisional Member:}  A Provisional Member has not yet been approved for
+Senior, Postdoctoral or Student Member status.  This status applies to all new Student and Postdoctoral members
 (including, for example, those in an existing Senior Member's group) as well as potential Senior Members.  This is intended to be a temporary status, typically a year, allowing the member to demonstrate
 sufficient constructive engagement with the Collaboration.
 }
@@ -462,9 +466,9 @@ Herein, ``Members'' refers to Senior, Postdoctoral, Student and Provisional Memb
 
  Members must commit effort to approved infrastructure tasks.   
 The Membership Committee will work with the \exec\ to define and recommend infrastructure tasks that need filling, 
-\textcolor{red}{ and to define and communicate with members the level of expected effort.}
+\textcolor{red}{ and to define and communicate with Members the level of expected effort.}
 Tasks can include,  for example, designing, building, and testing software, hardware, or simulations; contributing to commissioning and observations; and management tasks. 
-Just as for the hardware, we anticipate having a collaboration-wide architecture for the software.  Thus, members will be expected to comply with interface, documentation and code review requirements in support of the goals of the Collaboration.   Other ways of contributing include taking on roles in the governance, including membership on the GB, EVC, ET, or the Councils and Committees described in \S\ref{sec:councils}.
+Just as for the hardware, we anticipate having a collaboration-wide architecture for the software.  Thus, Members are expected to comply with interface, documentation and code review requirements in support of the goals of the Collaboration.   Other ways of contributing include taking on roles in the governance, including membership on the GB, EVC, ET, or the Councils and Committees are described in \S\ref{sec:councils}.
 
 
 
@@ -498,7 +502,7 @@ The Collaboration will initially consist of members that were eligible to vote o
 
 Within the first year of the Collaboration's establishment, prospective members can be granted membership by successfully petitioning the Membership Committee despite not satisfying the above criteria.  The Membership Committee may approve such applications during the first year without action by the Governing Board.  
 
-The Collaboration will initially consist of members that were eligible to vote on these governance bylaws (by virtue of attendance at two or more Collaboration meetings, or a successful petition for eligibility), and cast a vote on them. 
+%The Collaboration will initially consist of members that were eligible to vote on these governance bylaws (by virtue of attendance at two or more Collaboration meetings, or a successful petition for eligibility), and cast a vote on them. 
 
 \subsection{Membership Review and Changes in Status}
 The membership status of each member will be reviewed by the Membership Committee each year. 
