now with document version tracking front page

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -29,9 +29,28 @@
 
 \begin{document}
 
+
 \title{CMB-S4 Science Collaboration Bylaws}
 \maketitle
 
+\begin{table}[h]
+%\caption{Version Control Table.  The version number is given as $X$.$Y$, where major amendments are indicated with  increments to $X$, while minor ones increment $Y$. }
+\begin{center}
+\begin{tabular}{| l | p{3.0in} | c | c |}
+\hline
+{\bf Version} & {\bf Purpose/Changes} & {\bf Date Proposed} & {\bf Date Ratifed}  \\
+\hline\hline
+1.0 & First complete draft after discussions at March 2018 Collaboration Workshop & 03/12/2018 & \\ \hline
+& & & \\   & & & \\  \hline % Make the empty  boxes double tall here only to illustrate revisions may come)
+& & & \\   & & &\\ \hline
+\end{tabular}
+\end{center}
+\label{tab:version}
+\end{table}%
+
+\thispagestyle{empty}
+
+\newpage
 
 \tableofcontents
 
