--- a/bylaws.tex
+++ b/bylaws.tex
@@ -792,27 +792,28 @@ These bylaws may be amended by the GB. A new bylaw or an amendment may be presen
 \section{First Election and Voting Procedures}
 \label{app:first_election}
 
-For the initial election procedures the ICCC replaces the role of the GB, and an Interim Election and Voting Commission (IEVC) appointed by the ICCC conducts the elections and voting.  
+For the initial election procedures the ICCC takes the role of the GB, and an Interim Election and Voting Commission (IEVC) appointed by the ICCC conducts the elections and voting.  
 
-The elected candidates begin to serve immediately after the elections are completed. The end of their terms is determined by adding the length of the nominal term for their positions (one, two or three years) to June 30, 2018. 
+The elected candidates begin to serve immediately after the elections are completed. The ends of their terms are determined by adding the lengths of the nominal terms for their positions (one, two or three years) to June 30, 2018. 
 \textcolor{red}{As is directed for elections once the Collaboration is established, the initial elections are sequenced to provide Collaboration Members multiple opportunities to participate in Collaboration governance. }
 
 \subsection{Spokespersons} 
-The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates.  \textcolor{red}{A ranked voting scheme to be approved by the ICCC prior to the election will be used to determine the Spokespersons. 
-The first Spokesperson terms are to be three years. \sout{ to enable staggered leadership elections with the other members of the Executive Team in future elections.} }
+The IEVC follows the election process \textcolor{red} {for the Spokespersons}  described in \S\ref{sec:elections} of the Bylaws.  \textcolor{red}{\sout{ Collaboration members may vote for two candidates.} A ranked voting scheme to be approved by the ICCC prior to the election will be used to determine the Spokespersons. 
+The first Spokesperson terms are three years in duration (not including the time prior to June 30, 2018). \sout{ to enable staggered leadership elections with the other members of the Executive Team in future elections.} }
 %, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
 
 \subsection{Council and Committee Chairs}
-\textcolor{red}{The co-Chairs of the Science Council, and the Chairs of the Membership Committee and the Publication and Speakers Committee are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  Prior to the election, Voting Members are asked to nominate individuals for the Chair positions to the IEVC.   Self-nominations are accepted.
-After a nomination period, the IEVC will consult with the nominees to ascertain their willingness to stand for the election. Candidates are only allowed to stand for one open position. 
-A ranked voting scheme approved by the ICCC prior to the election will be used to determine the Science Council co-Chairs. \sout{For the Committee chairs each Voting Member votes for a single candidate for each open Chair position.} In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. }
+\textcolor{red}{The first terms of the co-Chairs of the Science Council, and the Chairs of the Membership Committee and the Publication and Speakers Committee are two years in duration (not including the time prior to June 30, 2018). 
+The IEVC follows the election process described in \S\ref{sec:elections} of the Bylaws for these four Chairs.
+\sout{All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  Prior to the election, Voting Members are asked to nominate individuals for the Chair positions to the IEVC.   Self-nominations are accepted. After a nomination period, the IEVC will consult with the nominees to ascertain their willingness to stand for the election. Candidates are only allowed to stand for one open position.} 
+A ranked voting scheme approved by the ICCC prior to the election will be used to determine the Science Council co-Chairs. For the Committee Chairs each Voting Member votes for a single candidate for each open Chair position. In the event of a tie, a runoff election will be held between the \sout{two} candidates that have the same number of votes. }
 
 
 \subsection{Governing Board}
-\textcolor{red}{The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws, with the modification that the ICCC approves the ranked vote scheme.  Additionally,} prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.). For the first election, the top 10 vote-receiving candidates are automatically selected for the GB. If the representation requirements outlined above are unfulfilled by the elected candidates, the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this juncture the  ICCC is empowered to make appoint the remaining seats to meet these requirements, drawing from the list of nominated candidates. 
-To enable offset elections (to ensure an element of continuity in the GB), 50\% of the first GB members will serve 3 year terms as determined by random draw. 
+\textcolor{red}{The IEVC follows the election process \textcolor{red} {for the GB members} described in \S\ref{sec:elections} of the Bylaws, with the modification that the ICCC approves the ranked voting scheme.  Additionally,} prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.). For the first election, the top 10 vote-receiving candidates are automatically selected for the GB. If the representation requirements outlined above are unfulfilled by the elected candidates, the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this juncture the  ICCC is empowered to make appointments for the remaining seats to meet these requirements, drawing from the list of nominated candidates. 
+To enable offset elections (to ensure an element of continuity in the GB), 50\% of the first GB members will serve three-year terms as determined by random draw. 
 
-After the GB is established, it is to amend these bylaws to establish whether to have separate votes for each category of representation or to continue with a mixed election/appointed governing board model. It is the expectation that the GB will evolve to a fully elected body as the Collaboration matures. 
+After the GB is established, it is to amend these bylaws to establish whether to have separate votes for each category of representation or to continue with a mixed election/appointed model for its board members. It is the expectation that the GB will evolve to a fully elected body as the Collaboration matures. 
 
 After the GB is established and its Chair selected, the ICCC is terminated.
 
