Amended bylaws with amendment 001 ratified 11/8/2018

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -31,7 +31,7 @@
 %% Now actually use the newly defined style.
 \urlstyle{leo}
 
-\newcommand\versionnumber{1.0}
+\newcommand\versionnumber{1.1}
 \newcommand\collabname{CMB-S4}
 
 
@@ -45,7 +45,7 @@
 \title{\collabname\ Science Collaboration Bylaws \\ 
 \large{Version \versionnumber}}
 %\subtitle{Version \versionnumber}
-
+\date{November 8, 2018}
 \maketitle
 
 \vfill
@@ -60,8 +60,8 @@
 &  & {\bf Date} & {\bf Date}  \\
 {\bf Version}  &  \hspace{1.0in} {\bf Purpose/Changes} & {\bf Proposed} & {\bf Ratified} \\
 \hline\hline
-\versionnumber & First complete draft after discussions at March 2018 Collaboration Workshop & 03/12/2018 & \\ \hline
-& & & \\   & & & \\  \hline % Make the empty  boxes double tall here only to illustrate revisions may come)
+1.0 & First complete draft after discussions at March 2018 Collaboration Workshop & 03/12/2018 & \\ \hline
+1.1 & Amendment to Section 3.4 on Governing Board Meetings & 09/05/2018 & 11/08/2018 \\   & & & \\  \hline % Make the empty  boxes double tall here only to illustrate revisions may come)
 & & & \\   & & &\\ \hline
 \end{tabular}
 \end{center}
@@ -204,8 +204,13 @@ The Secretary of the GB is chosen informally by the GB Chair to serve during the
 
 \subsection{Governing Board Meetings}
 The first Governing Board will establish rules for its meetings after electing its Chair. This first meeting will be held no later than two months after the selection of the GB.  Agendas for scheduled meetings will be available to the full Collaboration in advance.  It is expected that the GB will meet no less than quarterly to ensure adequate attention to its duties. \textcolor{\markcolor}{Such meetings will occur approximately twice per year in closed session at every Collaboration meeting and additional meetings will be held by telephone or video conference. 
-\ifthenelse{\boolean{markup}}{ \sout{Special meetings can be called on the initiative of the GB chair or at the request of another GB Member.} }{} The GB Chair may call special meetings as needed.} The Spokespersons are typically asked to attend GB meetings, with the exception of any Closed Executive Sessions during the meetings.  The GB Chair can invite other observers at their discretion. Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB Members must cast votes directly or through proxies (including abstentions) for a vote to be valid.  
-GB votes can be held by email or other online method. Summaries of the GB meetings are distributed to the full Collaboration by the GB Chair or GB Secretary. These summaries must include meeting attendance and the %records of the votes cast by all GB Members.
+  \ifthenelse{\boolean{markup}}{ \sout{Special meetings can be called on the initiative of the GB chair or at the request of another GB Member.} }{} The GB Chair may call special meetings as needed.} The Spokespersons are typically asked to attend GB meetings, with the exception of any Closed Executive Sessions during the meetings.  The GB Chair can invite other observers at their discretion.
+
+%Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB Members must cast votes directly or through proxies (including abstentions) for a vote to be valid.  
+%GB votes can be held by email or other online method.
+% Amendment 001 ratified 2018-11-05
+Each meeting requires a quorum to conduct official GB business. Except where a supermajority vote is required, a motion will carry if more than half of the entire GB membership votes in favor of the motion. GB Members may cast votes directly or by proxy. GB votes can be held by email or other online method.
+Summaries of the GB meetings are distributed to the full Collaboration by the GB Chair or GB Secretary. These summaries must include meeting attendance and the %records of the votes cast by all GB Members.
 results of any votes taken.
  It is the expectation that GB Members participate in the majority of meetings. If a GB Member fails to participate %(via meeting attendance or email) 
  in $\ge 50\%$ of GB meetings in a year, their seat will be open to election during the following cycle and they will be barred from the board for a two-year term.  
