Revised to include amendment 002 on pub policy deadline ratified 3/13/19

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -31,7 +31,7 @@
 %% Now actually use the newly defined style.
 \urlstyle{leo}
 
-\newcommand\versionnumber{1.1}
+\newcommand\versionnumber{1.2}
 \newcommand\collabname{CMB-S4}
 
 
@@ -45,7 +45,7 @@
 \title{\collabname\ Science Collaboration Bylaws \\ 
 \large{Version \versionnumber}}
 %\subtitle{Version \versionnumber}
-\date{November 8, 2018}
+\date{March 13, 2019}
 \maketitle
 
 \vfill
@@ -61,7 +61,8 @@
 {\bf Version}  &  \hspace{1.0in} {\bf Purpose/Changes} & {\bf Proposed} & {\bf Ratified} \\
 \hline\hline
 1.0 & First complete draft after discussions at March 2018 Collaboration Workshop & 03/12/2018 & \\ \hline
-1.1 & Amendment to Section 3.4 on Governing Board Meetings & 09/05/2018 & 11/08/2018 \\   & & & \\  \hline % Make the empty  boxes double tall here only to illustrate revisions may come)
+1.1 & Amendment to Section 3.4 on Governing Board Meetings & 09/05/2018 & 11/08/2018 \\ \hline
+1.2 & Amendment to Section 9.1 to extend deadline for creation of publication policy & 02/12/2019 & 03/13/2019\\  \hline % Make the empty  boxes double tall here only to illustrate revisions may come)
 & & & \\   & & &\\ \hline
 \end{tabular}
 \end{center}
@@ -620,7 +621,9 @@ engineering designs, and analysis pipelines. All Collaboration members agree to 
 %All Collaboration members agree to the publication policy upon joining, and if they leave the Collaboration, they are bound by it for two years afterward.
 
 {\color{\markcolor} 
-The Publication and Speakers Committee will continue to refine the policy, and present a revision one year after the establishment of the Collaboration for ratification by its Voting Members.
+%The Publication and Speakers Committee will continue to refine the policy, and present a revision one year after the establishment of the Collaboration for ratification by its Voting Members.
+% Amendment 002, ratified 3/13/19
+The Publication and Speakers Committee will continue to refine the policy, and present a revision no later than March 1, 2020 for ratification by the Voting Members of the Collaboration.  
 }
 
 \subsection{Organization}
