Revised to include Amendment 003 concerning postdoctoral membership, ratified 5/16/19

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -31,7 +31,7 @@
 %% Now actually use the newly defined style.
 \urlstyle{leo}
 
-\newcommand\versionnumber{1.2}
+\newcommand\versionnumber{1.3}
 \newcommand\collabname{CMB-S4}
 
 
@@ -45,7 +45,7 @@
 \title{\collabname\ Science Collaboration Bylaws \\ 
 \large{Version \versionnumber}}
 %\subtitle{Version \versionnumber}
-\date{March 13, 2019}
+\date{May 16, 2019}
 \maketitle
 
 \vfill
@@ -61,9 +61,11 @@
 {\bf Version}  &  \hspace{1.0in} {\bf Purpose/Changes} & {\bf Proposed} & {\bf Ratified} \\
 \hline\hline
 1.0 & First complete draft after discussions at March 2018 Collaboration Workshop & 03/12/2018 & \\ \hline
-1.1 & Amendment to Section 3.4 on Governing Board Meetings & 09/05/2018 & 11/08/2018 \\ \hline
+1.1 & Amendment to Section 3.4 on Governing Board meetings & 09/05/2018 & 11/08/2018 \\ \hline
 1.2 & Amendment to Section 9.1 to extend deadline for creation of publication policy & 02/12/2019 & 03/13/2019\\  \hline % Make the empty  boxes double tall here only to illustrate revisions may come)
-& & & \\   & & &\\ \hline
+1.3 & Amendments to Sections 8.1, 8.4, and 8.6 of the CMB-S4 Bylaws, regarding postdoc membership & 03/04/2019 & 05/16/2019 \\ \hline
+& & & \\
+& & &\\ \hline
 \end{tabular}
 \end{center}
 \label{tab:version}
@@ -500,7 +502,12 @@ Five types of members are defined here.
 
 \item {\bf Senior Member:} A Senior Member of the Collaboration is a member who has a permanent appointment or an appointment, that under normal circumstances can be expected to be renewed indefinitely.   This includes tenure-track appointments at universities and their equivalents elsewhere.  
 
-\item {\bf Postdoctoral Member:} A postdoc working with a Senior Member at their institution can be designated as a Postdoctoral Member by that Senior Member.  Postdocs that reside at an institution where there is no Senior Member can apply to become a Postdoctoral Member and have their application evaluated by the Membership Committee on a case-by-case basis. 
+\item {\bf Postdoctoral Member:}
+  %  A postdoc working with a Senior Member at their institution can be designated as a Postdoctoral Member by that Senior Member.  Postdocs that reside at an institution where there is no Senior Member can apply to become a Postdoctoral Member and have their application evaluated by the Membership Committee on a case-by-case basis.
+  % Amendment 003 5/16/19
+A postdoc working with a Senior Member at their institution can be designated as a Postdoctoral Member by that Senior Member. Postdocs that are not working closely with a Senior Member (hereafter referred to as ``Independent Postdocs'') can apply to become a Postdoctoral Member and have their application evaluated by the Membership Committee on a case-by-case basis.
+
+
 
 \item {\bf Student Member:} A graduate student working with a Senior Member at their institution can be designated as a Student Member by that Senior Member.  We do not anticipate granting membership to students who are not supervised by a Senior Member.
 
@@ -553,8 +560,10 @@ After the Collaboration is formed with a first set of initial members (see \S\re
 
 \item Potential Senior Members will apply for Provisonal Membership via a written application where they specify their proposed work on \collabname.
 
-\item Independent postdocs not co-located with a Senior Member can apply for Postdoctoral Membership and have their application reviewed on a case-by-case basis. 
-
+\item % Independent postdocs not co-located with a Senior Member can apply for Postdoctoral Membership and have their application reviewed on a case-by-case basis.
+% Amendment 003 5/16/19
+Potential Independent Postdocs can apply for Postdoctoral Membership and have their applications reviewed on a case-by-case basis.
+  
 \item Postdoctoral members can apply for ``Intended Senior Membership Status," which would convey that the postdoc will have Senior Membership status when preparing to move to a specified permanent appointment or an appointment that, under normal circumstances, can be expected to be renewed indefinitely.  The Membership Committee will decide the requirements for achieving this status, the achievement of which grants Senior Membership at the new institution.
 
 \item Applications are reviewed by the Membership Committee. The Membership Committee recommends membership to the Governing Board.  The Governing Board approves membership.
@@ -582,8 +591,10 @@ The membership status of each member will be reviewed by the Membership Committe
 
 \begin{itemize} 
 
-\item Each Senior Member, and each independent postdoc not co-located with a Senior Member, will submit an annual activity report to the Membership Committee.  Reports of the Senior Members should include discussion of the activities of their supervisees (e.g., postdocs and students) in their report. The Membership Committee will review those reports, consulting with Collaboration members and Working Group leaders as appropriate.
-
+\item %Each Senior Member, and each independent postdoc not co-located with a Senior Member, will submit an annual activity report to the Membership Committee.  Reports of the Senior Members should include discussion of the activities of their supervisees (e.g., postdocs and students) in their report. The Membership Committee will review those reports, consulting with Collaboration members and Working Group leaders as appropriate.
+% Amendment 003 5/16/19
+Each Senior Member and each Independent Postdoc will submit an annual activity report to the Membership Committee. Reports of the Senior Members should include discussion of the activities of their supervisees (e.g., postdocs and students) in their report. The Membership Committee will review those reports, consulting with Collaboration members and Working Group leaders as appropriate.
+  
 \item Provisional Members will submit an annual activity report to the Membership Committee, which will review the report and determine whether the Provisional Member should be promoted to a Senior Member status, continue as a Provisional Member, or have their membership revoked.  Provisional Membership is intended to be a temporary status.
 
 \item Members leaving the Collaboration may be granted Legacy Membership upon review by the Membership Committee and approval by the GB.
