Draft v1.5 bylaws with pub policy amendment with draft revisions from March, June, and Nov 2020 (and fixed typo "author's responses" -> "authors' responses" in Dec 2020.

--- a/bylaws_v1.5_DRAFT.tex
+++ b/bylaws_v1.5_DRAFT.tex
@@ -61,7 +61,7 @@
 \revision{\Large DRAFT AMENDMENT 005\\ MARKED-UP VERSION FOR REFERENCE \\}
 \textit{\revision{March 2020 revisions are marked by this color.\\}
   \revtwo{June 2020 revisions are marked by this color.\\}
-  \revthree{October 2020 revisions are marked by this color.\\}}
+  \revthree{October/November 2020 revisions are marked by this color.\\}}
   
 
 \begin{table}[h]
@@ -673,7 +673,7 @@ Any Collaboration member may propose a Collaboration research project to an appr
 \begin{enumerate}
 \item \revtwo{\textbf{Key Projects}} \revision{\sout{Projects that are designated as}}  represent the main science goals of the Collaboration (or forecasts for \revthree{\sout{what we will achieve} those main science goals}), where the Collaboration must speak with a single voice.  
 \item \revtwo{\textbf{Science Data Projects} \sout{``Non-key''}}  \revision{\sout{analysis projects}}  represent other science goals and use Collaboration science data.  
-\item \revtwo{\sout{Other}} \revthree{\sout{\textbf{Forecasts and Technical Reports}} \textbf{Technical Reports and Non-key-project Forecasts}} are Collaboration-vetted projects that do not require Collaboration science data and may lead to a publication or conference proceeding.  
+\item \revtwo{\sout{Other}} \revthree{\sout{\textbf{Forecasts and Technical Reports}} \textbf{Technical Reports and Non-key-project Forecasts}} are Collaboration-vetted projects that do not require Collaboration science data and \revthree{are not forecasts for key-project science goals. They} may lead to a publication or conference proceeding.  
 \end{enumerate}
 The Science Council will maintain the list of Key Science topics, to be established prior to any projects being initiated.  Topics can be added to the Key Science paper list and reviewed in coordination with the Publication Board.
 
@@ -745,6 +745,8 @@ In total, all projects/papers will have four formal public announcements to the 
   Projects will also naturally be discussed in plenary teleconference calls, progress reviews, and Working Group reports.
 
 \revision{\sout{All \collabname\ publications, including proceedings and theses, must include a standard acknowledgment, agreed to and updated by the Governing Board, and made available by the Publication Board.  The Collaboration will pay the page charges for Key Project papers. For all other papers, the page charges are the responsibility of the authors.}}
+
+\revthree{For all papers submitted for publication to refereed journals, referee comments are to be posted to a centralized location maintained by the Publication Board, along with authors' responses. If revisions are needed, the Publication Board will determine whether or not the revisions are minor or major. In the case of major revisions, the revised paper will then be sent to the original internal review committee for review (in general no longer than three weeks). Once approved by the original internal review team, there will be a week-long collaboration-wide public comment period. After this period, the Publication Board will vote to approve the changes and resubmit, considering the recommendation from the original internal review team.}
 
 Any disputes regarding the review process will be resolved by the Publication Board with the Spokespersons providing tie-breaking votes if necessary. In the case of a time-sensitive discovery, the review period may be shortened by unanimous consent of the Publication Board.
 
