removed commented-out text

--- a/bylaws_v1.78910.tex
+++ b/bylaws_v1.78910.tex
@@ -121,14 +121,12 @@ Throughout this document,  a ``supermajority vote" is defined as a result with m
 \section{Overall Structure}
 
 The governance structure of the \collabname\ Collaboration is illustrated in Figure~\ref{fig:org_chart}.  The Governing Board (GB) provides oversight to an \exec\ (ET) led by two equal co-Spokespersons.  A number of Councils, Committees and Working Groups carry out necessary work to enable the overall science objectives of the Collaboration. The overall scope, selection of, and interplay among these governance entities is described in the remainder of this document. 
-%\sout{\textcolor{magenta}{Throughout this document, when referring to ``major bodies'', we intend: major body 1, major body 2, .., major body N. Those entities not explicitly mentioned in the former list are intended as ``minor bodies''. Note that this distinction only serves the purpose of defining the duration of corresponding elected positions.} \Comment{agree on definition of major bodies.}}
 
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=6.5in]{cmbs4_org_v11.pdf}
 \end{center}
-\caption{\collabname\ Collaboration Organizational Chart. \textcolor{green}{EDI is currently an ad hoc committee convened by the Spokespeople.}}%\sout{\textcolor{magenta}{To be modified so as to reflect distinction between major and minor bodies, see Sec.2.}}}
-
+\caption{\collabname\ Collaboration Organizational Chart. \textcolor{green}{EDI is currently an ad hoc committee convened by the Spokespeople.}}
 \label{fig:org_chart}
 \end{figure}
 
